# melisa

./: .env.example  .env.example.googlesheets  .env.example.local  .env.example.m365  .gitignore  README.md  pyproject.toml  start.sh
app/: main.py
app/core/: config.py
app/core/providers/: __init__.py  base.py  local_file.py  microsoft365.py
app/routers/: excel.py
app/static/: index.html
app/static/01-general/: shared.css  shell.js
app/static/02-excelprocessor/: excel-shared.js  processor.html  table.html
tests/: test_api.py  test_local_provider.py  test_providers.py
